# handvu

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  ac_common.m4  aclocal.m4  configure  configure.ac  hvconfig.h.in
config/: ARtk.conductor  FireFly4mm_calib.txt  FireI.txt  Lback.mask  Lpalm.mask  all_extended_0_5_10_15_closed_30x20.cascade  all_extended_0_5_10_15_closed_30x20.mask  all_hands_combined.cascade  closed.mask  default.conductor  open.mask  sidepoint.mask  track_only.conductor  victory.mask
cubicles/: Cascade.cpp  Cascade.h  CascadeFileParser.cc  CascadeFileParser.h  CascadeFileParser.yy  CascadeFileScanner.c  CascadeFileScanner.l  Classifiers.cpp  Classifiers.h  Exceptions.cpp  Exceptions.h  Image.cpp  Image.h  IntegralFeatures.cpp  IntegralFeatures.h  IntegralFeaturesSame.cpp  IntegralImage.cxx  IntegralImage.h  Makefile.am  Makefile.in  Rect.h  Scanner.cpp  Scanner.h  StringUtils.cpp  cubicles.cpp  cubicles.h  cubicles.hpp  cubicles.vcproj
doc/: ApplicationDocumentation.html  HandVuAPI.html  InstallationLinux.html  InstallationWindows.html  index.html  video.c.patch
handvu/: CamShift.cpp  CamShift.h  Common.h  CubicleWrapper.cpp  CubicleWrapper.h  Exceptions.cpp  Exceptions.h  FileHandling.cpp  FileHandling.h  GestureServer.cpp  GestureServer.h  HandVu.cpp  HandVu.h  HandVu.hpp  HandVu.vcproj  HandVu_Cintf.cpp  HandVu_img.cpp  LearnedColor.cpp  LearnedColor.h  Makefile.am  Makefile.in  Mask.cpp  Mask.h  OSCpacket.cpp  OSCpacket.h  OpticalFlow.cpp  OpticalFlow.h  OpticalFlowPredict.cpp  ProbDistrProvider.h  Quadruple.h  Rect.h  Skincolor.cpp  Skincolor.h  Thread.cpp  Thread.h  Undistortion.cpp  Undistortion.h  VisionConductor.cpp  VisionConductor.h  skinrgb.h  (+2 more)
hv_ARtk/: LinuxDC1394CameraController.cpp  LinuxDC1394CameraController.h  Makefile.am  Makefile.in  callbacks.cpp  callbacks.h  drawing.cpp  drawing.h  gsub.c  gsub.h  hv_ARtk_demo.cpp  hv_ARtk_demo.h  hv_process_frame.cpp  main.cpp  main.h  sdlut.c  sdlut.h
hv_ARtk/data/: patt.Q  patt.arrow  patt.books  patt.flagdot  patt.idot  patt.kolping  patt.swisscheese  patt.tbars  patt.tetris
hv_CvCam/: Makefile.am  Makefile.in  hv_CvCam.cpp  hv_CvCam.vcproj
hv_DXApp/: DXApp.cpp  DXApp.h  DXApp.rc  DXApp.vcproj  DXAppDoc.cpp  DXAppDoc.h  DXAppView.cpp  DXAppView.h  DXCommandLineInfo.cpp  DXCommandLineInfo.h  DXManager.cpp  DXManager.h  MainFrm.cpp  MainFrm.h  Makefile.am  Makefile.in  README  resource.h  stdafx.h
hv_DXApp/res/: DXApp.manifest  DXApp.rc2
hv_DXFilter/: DllTester.cpp  DllTester.vcproj  FrameDataLib.h  FrameDataLib.lib  HandVuFilter.cpp  HandVuFilter.def  HandVuFilter.h  HandVuFilter.vcproj  HandVuFilterGUIDs.h  HandVuFilterProp.cpp  HandVuFilterProp.h  HandVuFilterProp.rc  IHandVuFilter.h  IconGroup.cpp  IconGroup.h  ImageOverlay.h  MaintenanceApp.cpp  MaintenanceApp.h  Makefile.am  Makefile.in  StdAfx.h  resource.h
hv_OpenCV/: Makefile.am  Makefile.in  hv_OpenCV.cpp  hv_OpenCV.vcproj
hv_dc1394/: Makefile.am  Makefile.in  dc1394_help.sh  hv_dc1394.cpp
