
#bin_PROGRAMS = DXApp

DXApp_SOURCES = \
DXApp.cpp DXAppView.cpp MainFrm.cpp \
DXAppDoc.cpp DXCommandLineInfo.cpp DXApp.rc DXManager.cpp

noinst_HEADERS = \
DXAppDoc.h  DXAppView.h          DXManager.h  resource.h \
DXApp.h     DXCommandLineInfo.h  MainFrm.h    stdafx.h

RESOURCE_FILES = \
res/DXAppDoc.ico res/DXApp.ico res/DXApp.manifest \
res/DXApp.rc2 res/Toolbar.bmp


EXTRA_DIST = DXApp.vcproj $(DXApp_SOURCES) $(RESOURCE_FILES)


